# kv

./: .gitignore  Cargo.toml  README.md  flake.nix  treefmt.nix
.github/actions/nix/: action.yml
.github/workflows/: ci.yaml  ci.yml
entity/: Cargo.toml
entity/src/: key.rs  lib.rs  main.rs  prelude.rs
kv/: Cargo.toml
kv/src/: app.rs  cli.rs  database.rs  lib.rs  main.rs
kv/src/app/: config.rs  error.rs  mod.rs
kv/src/app/config/: error.rs
kv/src/app/json/: jq.rs  mod.rs  repository.rs  tests.rs
kv/src/cli/: command.rs  completion.rs  json.rs  mod.rs
kv/src/cli/command/: mod.rs  tests.rs
kv/src/config/: error.rs  mod.rs
kv/src/database/: error.rs  mod.rs
kv/src/env/: mod.rs
kv/src/env/stdio/: memory.rs  mod.rs
kv/src/jq/: error.rs
kv/src/json/: error.rs  format.rs  mod.rs  repository.rs  tests.rs
kv/src/json/format/: error.rs  mod.rs
kv/src/json/repository/: error.rs  mod.rs
kv/src/jsonformat/: mod.rs
kv/tests/: completion.rs  json.rs
kv/tests/common/: mod.rs
migration/: Cargo.toml
migration/src/: lib.rs  m20240618_190031_create_keys_table.rs
migrations/: V1__initial.sql  V1_initial.sql
src/: app.rs  cli.rs  database.rs  main.rs  migrations.rs
src/app/: json.rs  mod.rs
src/app/json/: jq.rs  mod.rs  tests.rs
xtask/: Cargo.toml
xtask/src/: main.rs
