[package]
name = "kv"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.81"
clap = { version = "4.5.4", features = ["derive"] }
dirs = "5.0.1"
refinery = { version = "0.8.12", features = ["rusqlite"] }
rusqlite = { version = "0.30.0", features = ["bundled"] }
thiserror = "1.0.58"
