[package]
name = "kv"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
entity = { path = "../entity" }
migration = { path = "../migration" }
anyhow = "1.0.81"
async-std = { version = "1.12.0", features = ["attributes"] }
clap = { version = "4.5.4", features = ["derive"] }
dirs = "5.0.1"
env_logger = { version = "0.11.3", features = ["unstable-kv"] }
jq-sys = { version = "0.2.2", features = ["bundled"] }
libc = "0.2.155"
log = { version = "0.4.21", features = ["kv", "kv_std"] }
thiserror = "1.0.58"
sea-orm = { version = "0.12.15", features = ["sqlx-sqlite", "runtime-async-std-native-tls", "sea-orm-internal", "debug-print"] }
sea-query = { version = "0.30.7", default-features = false, features = ["sea-query-derive", "derive", "backend-sqlite"] }
config = "0.14.0"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = { version = "1.0.120", features = ["preserve_order"] }
clap_complete = "4.5.8"

[dev-dependencies]
predicates = "3.1.0"
pretty_assertions = "1.4.0"
tempfile = "3.10.1"
assert_cmd = { version = "2.0.14", features = ["color"] }
